# proyecto-scrapper

./: CMakeLists.txt  README.md  main.cpp
include/: Bookmark.h  BookmarkList.h  BookmarkManager.h  ClearScreen.h  ConsoleUI.h  FavoritesMenu.h  FileStorage.h  Folder.h  FolderList.h  HistoryManager.h  HtmlExporter.h  MainMenu.h  MenuHandler.h  NavigationMenu.h  Page.h  PageStack.h  PersistenceMenu.h  (+1 more)
tests/: CMakeLists.txt  final_tests_SessionCompleta.cpp  integracion_test_BookmarkManager.cpp  integracion_test_BookmarkManagerConFolders.cpp  integracion_test_BookmarkManagerWithFolders.cpp  integracion_test_HistoryManager.cpp  integracion_test_PersistenciaBookmarkManager.cpp  integracion_test_PersistenciaCarpetas.cpp  integracion_test_PersistenciaUnificada.cpp  integracion_test_UI_AddBookmark.cpp  integracion_test_UI_AddToFolder.cpp  integracion_test_UI_AgregarPaginaActual.cpp  integracion_test_UI_CrearCarpeta.cpp  integracion_test_UI_CreateFolder.cpp  integracion_test_UI_ExportHtml.cpp  integracion_test_UI_Favoritos.cpp  integracion_test_UI_FavoritosPorCarpeta.cpp  integracion_test_UI_History.cpp  integracion_test_UI_ListFolder.cpp  integracion_test_UI_Navegacion.cpp  integracion_test_UI_NavegarAFavorito.cpp  integracion_test_UI_Persistencia.cpp  integracion_test_UI_RestoreBookmark.cpp  integracion_test_UI_SaveLoad.cpp  test_Bookmark.cpp  test_BookmarkList.cpp  test_BookmarkManager.cpp  test_BookmarkManagerPersistencia.cpp  test_FileStorage.cpp  test_Folder.cpp  test_FolderList.cpp  test_HistoryManager.cpp  test_HtmlExporter.cpp  test_Page.cpp  test_PageStack.cpp
(+21 files in other folders)
